Integrate NullAway for nullability checks in ethstats package (#10520)
* feat: apply NullAway to ethstats module

* test: fix NullAway violations in ethstats test code

* test(ethstats): align successful AsyncResult cause() with Vert.x contract

* test(ethstats): add guard-path tests for sendBlockReport preconditions

Signed-off-by: mykim <kimminyong2034@gmail.com>

---------

Signed-off-by: mykim <kimminyong2034@gmail.com>
Co-authored-by: Sally MacFarlane <macfarla.github@gmail.com>